# eide_src

./: READMD.md  requirements.txt
edie_agent/: package.xml  setup.cfg  setup.py
edie_agent/edie_agent/: .gitignore  edie_agent.py
edie_agent/edie_agent/prompts/: prompt.py
edie_agent/edie_agent/toolbox/: StateNode.py  action.py  move.py  watch.py
edie_agent/edie_agent/utils/: help.py  llm.py
rosa/: package.xml  setup.cfg  setup.py
rosa/rosa/: __init__.py  rosa.py
rosa/rosa/tools/: __init__.py  calculation.py  log.py  ros2.py  system.py
yolo_perception/: CMakeLists.txt  package.xml
yolo_perception/msg/: DetectionArray.msg  DetectionInfo.msg
yolov11_ros/: package.xml  setup.cfg  setup.py
yolov11_ros/scripts/: yolo_ros_img.py  yolo_ros_service.py
yolov11_ros/yolov11_ros/: yolo_ros_pub_msg.py  yolo_ros_viewer.py
